# LowZero

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .nvim_project  404.html  CMakeLists.txt  DEV_SETUP.md  LowDebug.natvis  LowEngineConfig.cmake.in  README.md  index.html  lunr-index-1688587305034.json  lunr-index-1688587351946.json  lunr-index-1688635446118.json  lunr-index-1688642292880.json  lunr-index-1688766327100.json  lunr-index-1688766525267.json  lunr-index-1689077332397.json  lunr-index-1689077526113.json  lunr-index-1689077715662.json  lunr-index-1689255486006.json  lunr-index-1689352473850.json  lunr-index-1689440759801.json  lunr-index-1691427842141.json  lunr-index-1691432215398.json  lunr-index-1691487402671.json  lunr-index-1692535371388.json  lunr-index.json  project_config.cmake  search-doc-1688587173751.json  search-doc-1688587305034.json  search-doc-1688587351946.json  search-doc-1688635446118.json  search-doc-1688642292880.json  search-doc-1688766327100.json  search-doc-1688766525267.json  search-doc-1689077332397.json  search-doc-1689077526113.json  search-doc-1689077715662.json  (+8 more)
Flode/: CMakeLists.txt
Flode/include/: FLodeSyntaxNodes.h  Flode.h  FlodeApi.h  FlodeBoolNodes.h  FlodeCastNodes.h  FlodeDebugNodes.h  FlodeEditor.h  FlodeHandleNodes.h  FlodeHelpers.h  FlodeMathNodes.h  FlodeOperatorNodes.h  FlodeTypeNodes.h
Flode/src/: Flode.cpp  FlodeBoolNodes.cpp  FlodeCastNodes.cpp  FlodeDebugNodes.cpp  FlodeEditor.cpp  FlodeHandleNodes.cpp  FlodeHelpers.cpp  FlodeMathNodes.cpp  FlodeOperatorNodes.cpp  FlodeSyntaxNodes.cpp
LowAssetManager/: CMakeLists.txt
LowAssetManager/include/: LowAssetManagerImage.h
LowAssetManager/src/: LowAssetManager.cpp  LowAssetManagerImage.cpp
LowCore/: CMakeLists.txt
LowCore/include/: LowCore.h  LowCoreAnimator.h  LowCoreApi.h  LowCoreBoxCollider.h  LowCoreCamera.h  LowCoreCameraSystem.h  LowCoreCflatScripting.h  LowCoreCharacterController.h  LowCoreConvexHullCollider.h  LowCoreDebugGeometry.h  LowCoreDirectionalLight.h  LowCoreEntity.h  LowCoreEventManager.h  LowCoreFont.h  LowCoreGameLoop.h  LowCoreGameMode.h  LowCoreGameplaySystem.h  LowCoreGameplaySystemInstance.h  LowCoreInput.h  LowCoreLightSystem.h  LowCoreMaterial.h  LowCoreMeshAsset.h  LowCoreMeshRenderer.h  LowCoreMeshRendererSystem.h  LowCoreMeshResource.h  LowCoreMonoUtils.h  LowCoreNavmeshAgent.h  LowCoreNavmeshSystem.h  LowCorePhysics.h  LowCorePhysicsBodyMotionType.h  LowCorePhysicsObjects.h  LowCorePhysicsSystem.h  LowCorePointLight.h  LowCorePrefab.h  LowCorePrefabInstance.h  LowCoreRegion.h  LowCoreRegionSystem.h  LowCoreResource.h  LowCoreRigidbody.h  LowCoreScene.h  (+31 more)
LowCore/src/: LowCore.cpp  LowCoreAnimator.cpp  LowCoreBoxCollider.cpp  LowCoreCamera.cpp  LowCoreCameraSystem.cpp  LowCoreCflatScripting.cpp  LowCoreCharacterController.cpp  LowCoreConvexHullCollider.cpp  LowCoreDebugGeometry.cpp  LowCoreDirectionalLight.cpp  LowCoreEntity.cpp  LowCoreEventManager.cpp  LowCoreFont.cpp  LowCoreGameLoop.cpp  LowCoreGameMode.cpp  LowCoreGameplaySystem.cpp  LowCoreGameplaySystemInstance.cpp  LowCoreHelpers.cpp  LowCoreInput.cpp  LowCoreLightSystem.cpp  LowCoreMaterial.cpp  LowCoreMeshAsset.cpp  LowCoreMeshRenderer.cpp  LowCoreMeshRendererSystem.cpp  LowCoreMeshResource.cpp  LowCoreMonoDebugGeometry.inl  LowCoreMonoHandleHelper.inl  LowCoreMonoLog.inl  LowCoreMonoTypeMethods.inl  LowCoreMonoUtils.cpp  LowCoreNavmeshAgent.cpp  LowCoreNavmeshSystem.cpp  LowCorePhysics.cpp  LowCorePhysicsBodyMotionType.cpp  LowCorePhysicsSystem.cpp  LowCorePointLight.cpp  LowCorePrefab.cpp  LowCorePrefabInstance.cpp  LowCoreRegion.cpp  LowCoreRegionSystem.cpp  (+34 more)
LowDependencies/: CMakeLists.txt
LowDependencies/imgui/: imgui.cpp  imgui.h  imgui_stacklayout.h  imgui_widgets.cpp
LowDependencies/imgui3/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_stacklayout.cpp  imgui_stacklayout.h  imgui_stacklayout_internal.h  imgui_widgets.cpp
LowDependencies/node-editor/: imgui_extra_math.h  imgui_extra_math.inl  imgui_node_editor.cpp
LowDependencies/old_imgui/: imgui_draw.cpp
LowEditor/: CMakeLists.txt  app.rc
LowEditor/include/: LowEditor.h  LowEditorApi.h  LowEditorAppearanceWidget.h  LowEditorAssetCreation.h  LowEditorAssetOperations.h  LowEditorAssetWidget.h  LowEditorBase.h  LowEditorChangeList.h  LowEditorChangeWidget.h  LowEditorCommonOperations.h  LowEditorConvexHullColliderTypeEditor.h  LowEditorConvexHullEditingLayer.h  LowEditorDetailsWidget.h  LowEditorEditWidget.h  LowEditorEditingLayer.h  LowEditorEditingLayerHelpers.h  LowEditorEditingWidget.h  LowEditorEntityTree.h  LowEditorFileSystem.h  LowEditorFlodeWidget.h  LowEditorFlyingCameraEditingLayer.h  LowEditorFonts.h  LowEditorGui.h  LowEditorHandlePropertiesSection.h  LowEditorIcons.h  LowEditorJobWidget.h  LowEditorLogWidget.h  LowEditorMainWindow.h  LowEditorMetadata.h  LowEditorNodeGraph.h  LowEditorNotifications.h  LowEditorProfilerWidget.h  LowEditorPropertyEditors.h  LowEditorRegionWidget.h  LowEditorRenderFlowWidget.h  LowEditorRenderViewWidget.h  LowEditorRendererDebugWidget.h  LowEditorResourceProcessor.h  LowEditorResourceProcessorMesh.h  LowEditorResourceWidget.h  (+32 more)
LowEditor/private_include/: LowEditorInternal.h
LowEditor/src/: LowEditor.cpp  LowEditorAppearanceWidget.cpp  LowEditorAssetCreation.cpp  LowEditorAssetOperations.cpp  LowEditorAssetWidget.cpp  LowEditorBase.cpp  LowEditorChangeList.cpp  LowEditorChangeWidget.cpp  LowEditorCommonOperations.cpp  LowEditorConvexHullColliderTypeEditor.cpp  LowEditorConvexHullEditingLayer.cpp  LowEditorDetailsWidget.cpp  LowEditorEditWidget.cpp  LowEditorEditingLayer.cpp  LowEditorEditingLayerHelpers.cpp  LowEditorEditingWidget.cpp  LowEditorEntityTree.cpp  LowEditorFileSystem.cpp  LowEditorFlodeWidget.cpp  LowEditorFlyingCameraEditingLayer.cpp  LowEditorFonts.cpp  LowEditorGui.cpp  LowEditorHandlePropertiesSection.cpp  (+51 more)
LowGfx/: CMakeLists.txt
LowMath/: CMakeLists.txt
LowRenderer/: CMakeLists.txt
LowRenderer2/: CMakeLists.txt
LowUtil/: CMakeLists.txt
Lowder/: CMakeLists.txt  CrashReporter.local.cmake.example
MistedaPlugin/: CMakeLists.txt
(+1387 files in other folders)
