project(LowEngineZero)

set(ENGINE_BUILD OFF)

cmake_minimum_required(VERSION 3.10)

set(LOW_YEAR_VERSION 2024)
set(LOW_MAJOR_VERSION 9)
set(LOW_MINOR_VERSION 1)

SET(LOW_SOURCE_PATH ${CMAKE_SOURCE_DIR})
SET(LOW_BINARY_PATH ${CMAKE_BINARY_DIR})

if (LOW_PATH)
  SET(LOW_BINARY_PATH "${LOW_PATH}/build")
  SET(LOW_SOURCE_PATH "${LOW_PATH}/")
endif()

SET(SAVED_BINARY_PATH ${CMAKE_BINARY_DIR})
SET(CMAKE_BINARY_DIR LOW_BINARY_PATH)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
   string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
  set(  SAVED_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
set(  SAVED_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
set(  SAVED_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
set(  SAVED_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_PDB_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
    set(  CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/app )
    set(  CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/lib )
    set(  CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/lib )
    set(  CMAKE_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/pdb )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

if (ENGINE_BUILD)
ELSE()
  set(LOW_MINOR_VERSION "${LOW_MINOR_VERSION}-DEV")
ENDIF()

set(CMAKE_CONFIGURATION_TYPES "Debug" "Release")
set(TARGET_BUILD_PLATFORM "windows")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(EASTL_BUILD_TESTS OFF)
set(EASTL_BUILD_BENCHMARK OFF)

set(CMAKE_DEBUG_POSTFIX "")


# First for the generic no-config case (e.g. with mingw)
#set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set(CMAKE_PDB_OUTPUT_DIRECTORY ${PDB_OUTPUT_DIR})
# Second, for multi-config builds (e.g. msvc)


FILE(GLOB SUBFOLDERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
SET(SUBPROJECTS "")
SET(FOUND "")

if (ENGINE_BUILD)
add_compile_definitions(
  LOW_EDITOR_BUILD
  IMGUI_DEFINE_MATH_OPERATORS
  LOW_DATA_PATH="./data"
  IMGUI_USER_CONFIG="${LOW_SOURCE_PATH}/LowRenderer/include/LowRendererImguiConfig.h"
  PX_PHYSX_STATIC_LIB
  DISABLE_CUDA_PHYSX
  PX_COOKING
  LOW_RENDERER_RENDEROBJECT_COUNT=1024
  LOW_SCRIPTS_PATH=./data/scripts
  CFLAT_ENABLED=1

  GAME_DLL_PATH="./Gameplay.dll"
)
else()
add_compile_definitions(
  LOW_EDITOR_BUILD
  IMGUI_DEFINE_MATH_OPERATORS
  #LOW_DATA_PATH="../../../misteda/data"
  IMGUI_USER_CONFIG="${LOW_SOURCE_PATH}/LowRenderer/include/LowRendererImguiConfig.h"
  #  LOW_RENDERER_COMPILE_SHADERS
  LOW_RENDERER_VALIDATION_ENABLED
  LOW_COLOR_LOG
  PX_PHYSX_STATIC_LIB
  DISABLE_CUDA_PHYSX
  PX_COOKING
  LOW_RENDERER_RENDEROBJECT_COUNT=1024
  CFLAT_ENABLED=1

  GAME_DLL_PATH="../../../misteda/build/Debug/app/Gameplayd.dll"
)
endif()

add_compile_definitions(
  LOW_VERSION_YEAR="${LOW_YEAR_VERSION}"
  LOW_VERSION_MAJOR="${LOW_MAJOR_VERSION}"
  LOW_VERSION_MINOR="${LOW_MINOR_VERSION}"
)

# Excluded directories
# These directorories are not part of the build tree
SET(SUB_EXCEPTIONS
  LowScripts
  LowDocs
  LowData
)

# Adds all subfolders that start with the prefix "Low" and are not
# listet as excluded to the SUBPROJECTS list
FOREACH(child ${SUBFOLDERS})
	      IF (child MATCHES "^Low")
	      	 IF (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
		    LIST(FIND SUB_EXCEPTIONS ${child} FOUND)

		    IF (FOUND LESS 0)
		    		    LIST(APPEND SUBPROJECTS ${child})
		    ENDIF()
		 ENDIF()
	ENDIF()
ENDFOREACH()

SET(LINK_DIRS "")
SET(SUBPROJECTS_LOWERCASE "")
SET(PROJECT_LINK_LIBS "")

# Adds subproject as subdirectory to cmake buildtree
FOREACH(project ${SUBPROJECTS})
  #add_subdirectory(${project})
ENDFOREACH()
add_subdirectory(LowDependencies)
add_subdirectory(LowMath)
add_subdirectory(LowUtil)
add_subdirectory(LowRenderer)
add_subdirectory(LowCore)
add_subdirectory(LowEditor)
add_subdirectory(Lowder)

# add_dependencies(LowEngineZero
  #LowMath
  #LowUtil
  #LowRenderer
  #LowCore
  #LowEditor
#)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
    set(  CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
   set(  CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
    set(  CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
    set(  CMAKE_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_PDB_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

SET(CMAKE_BINARY_DIR SAVED_BINARY_PATH)

