project(LowEngineZero)

option(ENGINE_BUILD "Enable engine release build")

cmake_minimum_required(VERSION 3.5)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5)

set(LOW_YEAR_VERSION 2026)
set(LOW_MAJOR_VERSION 6)
set(LOW_MINOR_VERSION 2)
set(LOW_RELEASE_VERSION_SUFFIX "")

if (DEFINED LOW_OVERRIDE_YEAR_VERSION)
  set(LOW_YEAR_VERSION 2026)
endif()

if (DEFINED LOW_OVERRIDE_MAJOR_VERSION)
  set(LOW_MAJOR_VERSION 6)
endif()

if (DEFINED LOW_OVERRIDE_MINOR_VERSION)
  set(LOW_MINOR_VERSION 2)
endif()

if (DEFINED LOW_OVERRIDE_RELEASE_VERSION_SUFFIX)
  set(LOW_RELEASE_VERSION_SUFFIX "${LOW_OVERRIDE_RELEASE_VERSION_SUFFIX}")
endif()

SET(LOW_SOURCE_PATH ${CMAKE_SOURCE_DIR})
SET(LOW_BINARY_PATH ${CMAKE_BINARY_DIR})

if (LOW_PATH)
  SET(LOW_BINARY_PATH "${LOW_PATH}/build")
  SET(LOW_SOURCE_PATH "${LOW_PATH}/")
endif()

SET(SAVED_BINARY_PATH ${CMAKE_BINARY_DIR})
SET(CMAKE_BINARY_DIR LOW_BINARY_PATH)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
  string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
  set(  SAVED_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  SAVED_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  SAVED_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  SAVED_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${CMAKE_PDB_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
  string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
  set(  CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/app )
  if(UNIX)
    set(  CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/app )
  else()
    set(  CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/lib )
  endif()
  set(  CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/lib )
  set(  CMAKE_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${LOW_BINARY_PATH}/${OUTPUTCONFIG}/pdb )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

if (ENGINE_BUILD)
  set(LOW_EFFECTIVE_MINOR_VERSION "${LOW_MINOR_VERSION}${LOW_RELEASE_VERSION_SUFFIX}")
ELSE()
  set(LOW_EFFECTIVE_MINOR_VERSION "${LOW_MINOR_VERSION}-DEV")
ENDIF()

set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "Supported configurations" FORCE)
set(TARGET_BUILD_PLATFORM "windows")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_compile_definitions($<$<CONFIG:Debug>:_DEBUG>)

if (MSVC)
  add_compile_options(/FS)
endif()

set(EASTL_BUILD_TESTS OFF)
set(EASTL_BUILD_BENCHMARK OFF)

set(CMAKE_DEBUG_POSTFIX "")


# First for the generic no-config case (e.g. with mingw)
#set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${APP_OUTPUT_DIR} )
#set(CMAKE_PDB_OUTPUT_DIRECTORY ${PDB_OUTPUT_DIR})
# Second, for multi-config builds (e.g. msvc)


FILE(GLOB SUBFOLDERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
SET(SUBPROJECTS "")
SET(FOUND "")

add_compile_definitions(
  GLM_ENABLE_EXPERIMENTAL
)

if (ENGINE_BUILD)
  add_compile_definitions(
  LOW_EDITOR_BUILD
  IMGUI_DEFINE_MATH_OPERATORS
  LOW_DATA_PATH="./data"
  PX_PHYSX_STATIC_LIB
  DISABLE_CUDA_PHYSX
  PX_COOKING
  LOW_RENDERER_RENDEROBJECT_COUNT=1024
  LOW_SCRIPTS_PATH=./data/scripts
  CFLAT_ENABLED=1
  RELEASE_BUILD=1
  LOW_RENDERER_COMPILE_SHADERS=0

  GAME_DLL_PATH="./Gameplay.dll"
)
else()
  add_compile_definitions(
  LOW_EDITOR_BUILD
  IMGUI_DEFINE_MATH_OPERATORS
  #LOW_DATA_PATH="../../../misteda/data"
  LOW_RENDERER_COMPILE_SHADERS=1
  LOW_RENDERER_VALIDATION_ENABLED
  # LOW_RENDERER_VALIDATION_VERBOSE
  # LOW_RENDERER_VALIDATION_BEST_PRACTICES
  # LOW_RENDERER_VALIDATION_SYNCHRONIZATION
  # LOW_RENDERER_VALIDATION_GPU_ASSISTED
  LOW_COLOR_LOG
  PX_PHYSX_STATIC_LIB
  DISABLE_CUDA_PHYSX
  PX_COOKING
  LOW_RENDERER_RENDEROBJECT_COUNT=1024
  CFLAT_ENABLED=1
  RELEASE_BUILD=0

  GAME_DLL_PATH="../../../misteda/bin/Debug/Gameplay.dll"
)
endif()

# Excluded directories
# These directorories are not part of the build tree
SET(SUB_EXCEPTIONS
  LowScripts
  LowDocs
  LowData
  LowCrashOpener
)

# Adds all subfolders that start with the prefix "Low" and are not
# listet as excluded to the SUBPROJECTS list
FOREACH(child ${SUBFOLDERS})
  IF (child MATCHES "^Low")
    IF (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
      LIST(FIND SUB_EXCEPTIONS ${child} FOUND)

      IF (FOUND LESS 0)
        LIST(APPEND SUBPROJECTS ${child})
      ENDIF()
    ENDIF()
  ENDIF()
ENDFOREACH()

SET(LINK_DIRS "")
SET(SUBPROJECTS_LOWERCASE "")
SET(PROJECT_LINK_LIBS "")

# Adds subproject as subdirectory to cmake buildtree
FOREACH(project ${SUBPROJECTS})
  #add_subdirectory(${project})
ENDFOREACH()
option(LOW_ENABLE_ASAN "Enable AddressSanitizer" OFF)

if (LOW_ENABLE_ASAN)
  if (MSVC)
    add_compile_options(/fsanitize=address)
    add_link_options(/INCREMENTAL:NO)
  endif()
endif()

option(LOW_JOBMANAGER_TRACKING
       "Track JobManager jobs for editor/debug tooling" ON)

if (LOW_JOBMANAGER_TRACKING)
  add_compile_definitions(LOW_JOBMANAGER_TRACKING=1)
else()
  add_compile_definitions(LOW_JOBMANAGER_TRACKING=0)
endif()

add_subdirectory(LowDependencies)
add_subdirectory(LowMath)
add_subdirectory(LowUtil)
add_subdirectory(LowGfx)
add_subdirectory(LowRenderer)
add_subdirectory(LowRenderer2)
add_subdirectory(LowCore)
add_subdirectory(LowEditor)
add_subdirectory(Lowder)

set(LOW_DEBUG_VISUALIZERS
  "${CMAKE_CURRENT_SOURCE_DIR}/LowDependencies/EASTL/doc/EASTL.natvis"
  "${CMAKE_CURRENT_SOURCE_DIR}/LowDebug.natvis"
)

function(low_add_debug_visualizers target_name)
  if (MSVC AND TARGET ${target_name})
    target_sources(${target_name} PRIVATE ${LOW_DEBUG_VISUALIZERS})
    source_group("Debug Visualizers" FILES ${LOW_DEBUG_VISUALIZERS})
  endif()
endfunction()

foreach(LOW_VISUALIZER_TARGET
  LowMath
  LowUtil
  LowGfx
  LowRenderer
  LowRenderer2
  LowCore
  LowEditor
  Lowder
)
  low_add_debug_visualizers(${LOW_VISUALIZER_TARGET})
endforeach()

# add_dependencies(LowEngineZero
#LowMath
#LowUtil
#LowRenderer
#LowCore
#LowEditor
#)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
  string( TOUPPER ${OUTPUTCONFIG} UOUTPUTCONFIG )
  set(  CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
  set(  CMAKE_PDB_OUTPUT_DIRECTORY_${UOUTPUTCONFIG} ${SAVED_PDB_OUTPUT_DIRECTORY_${OUTPUTCONFIG}})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

SET(CMAKE_BINARY_DIR SAVED_BINARY_PATH)
